# Game-Engine1

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Game Engine.sln  README.md
Editor/: README.md
Engine/: README.md
Engine/Rendering/: RenderingContext.hpp
Engine/Rendering/Backend/: Renderer.cpp  Renderer.hpp
Engine/Rendering/Window/: GlfwWindow.cpp  GlfwWindow.hpp  Window.hpp
Game Engine/: Game Engine.vcxproj
Libs/: README.md
Libs/ImGui/: imgui.cpp  imgui.h  imgui_draw.cpp  imgui_impl_glfw.cpp
Libs/ImGuizmo/: ImGuizmo.cpp  ImSequencer.cpp
Libs/ImNodes/: imnodes.cpp  imnodes_internal.h
Resources/: README.md
